microservices/event-based/infra/k8s/moderation-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moderation-depl
spec:
  selector:
    matchLabels:
      app: moderation
  replicas: 1
  template:
    metadata:
      labels:
        app: moderation
    spec:
      containers:
        - name: moderation
          image: dilicfrancis/moderation
---
apiVersion: v1
kind: Service
metadata:
  name: moderation-srv
spec:
  selector:
    app: moderation
  ports:
    - name: moderation-http
      protocol: TCP
      port: 3004
      targetPort: 3004
