microservices/event-based/infra/k8s/nodeport-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: logs-nodeport-srv
spec:
  selector:
    app: logs
  type: NodePort
  ports:
    - name: logs-http
      protocol: TCP
      port: 3001
      targetPort: 3001
