microservices/event-based/infra/k8s/ingress-ngs.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: logs.com
      http:
        paths:
          - path: /logs/new
            pathType: Prefix
            backend:
              service:
                name: logs-srv
                port:
                  number: 3001
          - path: /logs
            pathType: Prefix
            backend:
              service:
                name: query-srv
                port:
                  number: 3003
          - path: /logs/?(.*)/comments
            pathType: Prefix
            backend:
              service:
                name: comments-srv
                port:
                  number: 3002
          - path: /
            pathType: Prefix
            backend:
              service:
                name: client-srv
                port:
                  number: 3000
